@@ -15,6 +15,7 @@ Fixed
     Deleting host removes to many metrics
     Cant restore VM snapshot to origin (#551)
     Cant restore instance snapshot to new instance (#555)
+    Unavailable to deploy cloud config on servers (#549)
 
 0.16.0 - 06/09/2022
 
